objects/SFDocumentor__Flows__c.object
<CustomObject>
    <fields>
        <fullName>SFDocumentor__CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Process_Builders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Created_by_Name__c</fullName>
        <label>Created by Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__DefinitionId__c</fullName>
        <label>DefinitionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Flow_Id__c</fullName>
        <externalId>true</externalId>
        <label>Flow Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__IsTemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__LastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Process_Builders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Last_Modified_Name__c</fullName>
        <label>Last Modified Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Last_Sync_Date__c</fullName>
        <label>Last SFDoc Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Link_URL__c</fullName>
        <formula>HYPERLINK(SFDocumentor__Link__c , Name ,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Setup Link/URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__ManageableState__c</fullName>
        <label>Manageable State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Name_of_the_tool_that_created_this_flow__c</fullName>
        <label>Name of the tool that created this flow</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__NamespacePrefix__c</fullName>
        <label>Namespace Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__ProcessType__c</fullName>
        <label>Process Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__RunInMode__c</fullName>
        <label>RunIn Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__SFDocumentorDesc__c</fullName>
        <label>SFDoc Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Used</fullName>
                </value>
                <value>
                    <fullName>Unused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDocumentor__TriggerType__c</fullName>
        <label>Trigger Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__VersionNumber__c</fullName>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__isLatestVersion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLatestVersion?</label>
        <type>Checkbox</type>
    </fields>
    <label>Flow Collection</label>
    <listViews>
        <fullName>SFDocumentor__Active</fullName>
        <columns>NAME</columns>
        <columns>SFDocumentor__ProcessType__c</columns>
        <columns>SFDocumentor__VersionNumber__c</columns>
        <columns>SFDocumentor__IsTemplate__c</columns>
        <columns>SFDocumentor__Link__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>SFDocumentor__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active</label>
    </listViews>
    <listViews>
        <fullName>SFDocumentor__All</fullName>
        <columns>NAME</columns>
        <columns>SFDocumentor__TriggerType__c</columns>
        <columns>SFDocumentor__Flow_Id__c</columns>
        <columns>SFDocumentor__IsActive__c</columns>
        <columns>SFDocumentor__VersionNumber__c</columns>
        <columns>SFDocumentor__SFDocumentorDesc__c</columns>
        <columns>SFDocumentor__Description__c</columns>
        <columns>SFDocumentor__ProcessType__c</columns>
        <columns>SFDocumentor__IsTemplate__c</columns>
        <columns>SFDocumentor__ManageableState__c</columns>
        <columns>SFDocumentor__Status__c</columns>
        <columns>SFDocumentor__Link_URL__c</columns>
        <columns>SFDocumentor__Created_by_Name__c</columns>
        <columns>SFDocumentor__Object_Name__c</columns>
        <columns>SFDocumentor__isLatestVersion__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Flows MasterLabel</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flow Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>